# mistralRAG

./: .env  README.md  main.py  pyproject.toml
article/: article.md
chroma_db/3fc53013-9263-4aa6-a1da-4f3baaae5e75/: index_metadata.pickle
chroma_db/70ba5369-6f9e-47a0-b1ee-e22a41acfdd7/: index_metadata.pickle
