[project]
name = "missrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-mongodb>=0.11.0",
    "langchain-text-splitters>=1.1.0",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
]
